# onnxruntime-rs

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
onnxruntime/: Cargo.toml
onnxruntime-sys/: Cargo.toml  build.rs  wrapper.h  wrapper_coreml.h
onnxruntime-sys/examples/: c_api_sample.rs
onnxruntime-sys/src/: bindings.rs  lib.rs
onnxruntime/examples/: io_binding.rs  yolov4.rs  yolov7.rs
onnxruntime/src/: allocator.rs  environment.rs  error.rs  io_binding.rs  lib.rs  memory.rs  memory_info.rs  ort_tensor_type_and_shape_info.rs  ort_value.rs  session.rs  tensor_type_and_shape_info.rs  value.rs
onnxruntime/src/tensor/: ndarray_tensor.rs  ort_owned_tensor.rs  ort_tensor.rs
