[package]
authors = ["Nicolas Bigaouette <nbigaouette@elementai.com>"]
edition = "2021"
name = "onnxruntime-sys"
version = "0.0.15"

description = "Unsafe wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime-sys"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

[dependencies]

[build-dependencies]
bindgen = "0.64.0"

[features]
default = ["cuda"]
cuda = []
