[package]
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2021"
name = "onnxruntime"
version = "0.0.14"

description = "Wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[[test]]
name = "integration_tests"
required-features = ["model-fetching"]

[dependencies]
onnxruntime-sys = { version = "0.0.14", path = "../onnxruntime-sys" }

lazy_static = "1.4.0"
ndarray = "0.15.4"
thiserror = "1.0.30"
tracing = "0.1.33"
image = "0.24.1"
nshare = { version = "0.9.0", features = ["ndarray", "image"] }

[dev-dependencies]
image = "0.24.1"
test-log = { version = "0.2.10", default-features = false, features = [
    "trace",
] }
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[features]
default = ["cuda", "generate-bindings"]
cuda = ["onnxruntime-sys/cuda"]
# Disable build script; used for https://docs.rs
disable-sys-build-script = ["onnxruntime-sys/disable-sys-build-script"]
generate-bindings = ["onnxruntime-sys/generate-bindings"]

[package.metadata.docs.rs]
features = ["disable-sys-build-script", "model-fetching"]
