[package]
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2021"
name = "onnxruntime"
version = "0.0.15"

description = "Wrapper around Microsoft's ONNX Runtime"
documentation = "https://docs.rs/onnxruntime"
homepage = "https://github.com/nbigaouette/onnxruntime-rs"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/nbigaouette/onnxruntime-rs"

categories = ["science"]
keywords = ["neuralnetworks", "onnx", "bindings"]

[dependencies]
half = "2.2.1"
lazy_static = "1.4.0"
ndarray = "0.15.6"
onnxruntime-sys = { path = "../onnxruntime-sys" }
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
image = "0.24.5"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
ndarray-rand = "0.14.0"

[features]
default = []
cuda = ["onnxruntime-sys/cuda"]
coreml = ["onnxruntime-sys/coreml"]
ort_1_14_0 = []
